# RapidMenu

./: .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  props.json  shell.nix
assets/: dashboard.conf
src/: ConfigManager.cpp  main.cpp  utils.cpp
src/includes/: ConfigManager.hpp  Strings.hpp  utils.hpp
